--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,23 @@
     --bright: #f5f5f5;
     --dark: #272727;
     --darker: #1f1f1f;
-    --mainColor: #ff652f;
+    --primaryColor: #ff652f;
     --secondaryColor: #ffe600;
     --tertiaryColor: #14a76c;
+    --navHeight: 8rem;
+    --contentPadding: 0 min(10vw, 10rem);
+    --contentMargin: 0 min(10vw, 10rem);
 }
-* {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 html { scroll-behavior: smooth; min-width: 300px; }
 body {
-    height: 100vh;
+    min-height: 100vh;
     background: var(--dark);
     color: var(--bright);
     font-size: 25px;
@@ -21,75 +26,107 @@ body {
     font-family: 'Josefin Sans', sans-serif;
     overflow-x: hidden;
 }
-header, article {
+/* header, article {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 article {
     padding: 2rem;
 }
+.text--primary { color: var(--primaryColor); }
 .navigation {
     width: 100vw;
-    position: fixed;
-    top: 0;
+    height: var(--navHeight);
+    /* position: fixed;
+    top: 0; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid var(--bright);
     padding: 0 3rem 0 3rem;
 }
-.socials {
+.navigation__logo {
     display: flex;
+    height: min(10vw, 4rem);
+    width: min(10vw, 4rem);
+    min-height: 3rem;
+    min-width: 3rem;
+    color: var(--primaryColor);
     gap: 1rem;
     transition: color 350ms ease-in-out;
 }
-.socials i:hover {
-    color: var(--mainColor);
+.navigation__logo:hover,
+.navigation__logo:active {
+    color: var(--bright);
     transition: color 350ms ease-in-out;
 }
-.navigation ul {
+.navigation__container {
     display: flex;
     gap: 1rem;
     list-style: none;
 }
-.navigation a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 3rem 0.5rem 3rem 0.5rem;
+.navigation__item {
+    padding: 1rem;
     text-decoration: none;
     color: var(--bright);
     transition: color 350ms ease-in-out;
 }
-.navigation a:hover {
-    color: var(--mainColor);
+.navigation__item:hover,
+.navigation__item:active {
+    color: var(--primaryColor);
     transition: color 350ms ease-in-out;
+}
+.button--primary {
+    padding: 1rem;
+    text-decoration: none;
+    color: var(--primaryColor);
+    border: 1px solid var(--primaryColor);
+    transition: 350ms ease-in-out;
+}
+.button--primary:hover {
+    background-color: var(--primaryColor);
+    color: var(--bright);
 }
 .navigation li>a>i {
     display: none;
 }
-.scrollTop {
-    position: fixed;
-    bottom: 3rem;
-    right: 3rem;
-    cursor: pointer;
-    font-size: 3rem;
-    color: var(--mainColor);
-    transition: color 350ms ease-in-out;
+.header {
+    display: flex;
+    gap: 4rem;
+    min-height: calc(100vh - var(--navHeight));
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: var(--contentPadding);
 }
-.scrollTop:hover {
-    color: var(--bright);
-    transition: color 350ms ease-in-out;
+.header__text {
+    margin: var(--contentMargin);
+    max-width: 80rem;
 }
-article {
-    background: var(--dark);
+/* .header__photo {
+    display: flex;
+    background: var(--bright);
+    box-shadow: 0 0 20px 8px var(--darker);
+
+} */
+.content {
+    display: flex;
+    flex-direction: column;
+    padding: var(--contentPadding);
+}
+.section {
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    margin: var(--contentMargin);
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 footer {
     display: flex;
     justify-content: center;
-    flex:1;
     padding: 4rem;
     background: var(--darker);;
 }
@@ -110,7 +147,6 @@ footer {
         border-top: 1px solid var(--bright);
         border-bottom: none;
     }
-    .navigation a { padding: 2rem 0.3rem 2rem 0.3rem; }
-    .scrollTop { bottom: 6rem; right: 1rem; font-size: 2.5rem;}
+    .navigation__item { padding: 2rem 0.3rem 2rem 0.3rem; }
     footer { padding: 2rem 2rem calc(1rem + 5.7rem) 2rem; }
 }
