--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --secondaryColor: #ffe600;
     --tertiaryColor: #14a76c;
     --navHeight: 8rem;
+    --navHeightNegative: calc(-1 * var(--navHeight));
     --contentPadding: 0 min(10vw, 10rem);
     --contentMargin: 0 min(10vw, 10rem);
 }
@@ -30,25 +31,32 @@ body {
 .navigation {
     width: 100vw;
     height: var(--navHeight);
-    /* position: fixed;
-    top: 0; */
+    position: sticky;
+    background-color: var(--dark);
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 3rem 0 3rem;
+    transition: 350ms ease-in-out;
 }
 .navigation__logo {
     display: flex;
     height: min(10vw, 4rem);
     width: min(10vw, 4rem);
-    min-height: 3rem;
-    min-width: 3rem;
+    min-height: 2rem;
+    min-width: 2rem;
     color: var(--primaryColor);
     gap: 1rem;
     transition: color 350ms ease-in-out;
 }
-.navigation__logo:hover,
-.navigation__logo:active {
+@media (hover: hover) {
+    .navigation__logo:hover {
+        color: var(--bright);
+        transition: color 350ms ease-in-out;
+    }
+}
+  .navigation__logo:active {
     color: var(--bright);
     transition: color 350ms ease-in-out;
 }
@@ -63,7 +71,12 @@ body {
     color: var(--bright);
     transition: color 350ms ease-in-out;
 }
-.navigation__item:hover,
+@media (hover: hover) {
+    .navigation__item:hover {
+        color: var(--primaryColor);
+        transition: color 350ms ease-in-out;
+    }
+}
 .navigation__item:active {
     color: var(--primaryColor);
     transition: color 350ms ease-in-out;
@@ -75,7 +88,13 @@ body {
     border: 1px solid var(--primaryColor);
     transition: 350ms ease-in-out;
 }
-.button--primary:hover {
+@media (hover: hover) {
+    .button--primary:hover {
+        background-color: var(--primaryColor);
+        color: var(--bright);
+    }
+}
+.button--primary:active {
     background-color: var(--primaryColor);
     color: var(--bright);
 }
@@ -121,23 +140,29 @@ footer {
     padding: 4rem;
     background: var(--darker);;
 }
-@media ( max-width: 1000px ) {
+@media ( max-width: 800px ) {
     body { font-size: 1rem; }
-}
-@media ( max-width: 600px ) {
-    body { font-size: 0.8rem; }
     .navigation {
         width: 100vw;
         position: fixed;
         top: unset;
         bottom: 0;
         padding: 0;
-        gap: 1rem;
+        gap: 0.5rem;
         justify-content: center;
         background: var(--darker);
         border-top: 1px solid var(--bright);
         border-bottom: none;
     }
-    .navigation__item { padding: 2rem 0.3rem 2rem 0.3rem; }
-    footer { padding: 2rem 2rem calc(1rem + 5.7rem) 2rem; }
+    footer { padding: 2rem 2rem calc(2rem + var(--navHeight)) 2rem; }
+}
+@media ( max-width: 400px ) {
+    body { font-size: 0.8rem; }
+    .navigation__item { padding: 0.7rem; }
+    .button--primary { padding: 0.7rem;}
+}
+@media ( max-width: 350px ) {
+    body { font-size: 0.7rem; }
+    .navigation__item { padding: 0.4rem; }
+    .button--primary { padding: 0.4rem;}
 }
