--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --secondaryColor: #ffe600;
     --tertiaryColor: #14a76c;
     --navHeight: 8rem;
+    --navHeightMobile: 6rem;
     --navHeightNegative: calc(-1 * var(--navHeight));
     --contentPadding: 0 min(10vw, 10rem);
     --contentMargin: 0 min(10vw, 10rem);
@@ -114,18 +115,12 @@ body {
     margin: var(--contentMargin);
     max-width: 80rem;
 }
-/* .header__photo {
-    display: flex;
-    background: var(--bright);
-    box-shadow: 0 0 20px 8px var(--darker);
-
-} */
 .content {
     display: flex;
     flex-direction: column;
     padding: var(--contentPadding);
 }
-.section {
+section {
     display: flex;
     gap: 2rem;
     flex-direction: column;
@@ -133,6 +128,35 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+}
+.about {
+    flex-direction: row;
+}
+.about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.about__image {
+    display: flex;
+    position: relative;
+    background: var(--bright);
+    box-shadow: 0 0 20px 8px var(--darker);
+}
+.about__image::before {
+    content: '';
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 100%;
+    height: 100%;
+    border: 1px solid var(--primaryColor);
+    z-index: -1;
+    transition: 350ms ease-in-out;
+}
+.about__image:hover::before {
+    top: 0;
+    right: 0;
 }
 footer {
     display: flex;
@@ -144,6 +168,7 @@ footer {
     body { font-size: 1rem; }
     .navigation {
         width: 100vw;
+        height: var(--navHeightMobile);
         position: fixed;
         top: unset;
         bottom: 0;
@@ -155,7 +180,7 @@ footer {
         border-bottom: none;
     }
     .navigation__container {gap: 0rem;}
-    footer { padding: 2rem 2rem calc(2rem + var(--navHeight)) 2rem; }
+    footer { padding: 2rem 2rem calc(2rem + var(--navHeightMobile)) 2rem; }
 }
 @media ( max-width: 450px ) {
     body { font-size: 0.8rem; }
