--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --bright: #f5f5f5;
-    --dark: #272727;
-    --darker: #1f1f1f;
+    --dark: #1c1c1c;
+    --darker: #161616;
     --primaryColor: #ff652f;
     --secondaryColor: #ffe600;
     --tertiaryColor: #14a76c;
@@ -40,6 +40,7 @@ body {
     justify-content: space-between;
     padding: 0 3rem 0 3rem;
     transition: top 350ms ease-in-out;
+    z-index: 9999;
 }
 .navigation__logo {
     display: flex;
@@ -51,7 +52,7 @@ body {
     gap: 1rem;
     transition: color 350ms ease-in-out;
 }
-@media (hover: hover) {
+@media (hover :hover) {
     .navigation__logo:hover {
         color: var(--bright);
         transition: color 350ms ease-in-out;
@@ -72,7 +73,7 @@ body {
     color: var(--bright);
     transition: color 350ms ease-in-out;
 }
-@media (hover: hover) {
+@media (hover :hover) {
     .navigation__item:hover {
         color: var(--primaryColor);
         transition: color 350ms ease-in-out;
@@ -89,7 +90,7 @@ body {
     border: 1px solid var(--primaryColor);
     transition: 350ms ease-in-out;
 }
-@media (hover: hover) {
+@media (hover :hover) {
     .button--primary:hover {
         background-color: var(--primaryColor);
         color: var(--bright);
@@ -115,6 +116,35 @@ body {
     margin: var(--contentMargin);
     max-width: 80rem;
 }
+.header__socials {
+    position: fixed;
+    bottom: 0;
+    left: min(8vw, 10rem);
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.header__socials::after {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 10rem;
+    margin: 0px auto;
+    background-color: var(--bright);
+}
+.socials__link {
+    text-decoration: none;
+    color: var(--bright);
+}
+@media (hover :hover)
+{
+    .socials__link:hover {
+        color: var(--primaryColor);
+    }
+}
+.socials__link:active {
+    color: var(--primaryColor);
+}
 .content {
     display: flex;
     flex-direction: column;
@@ -137,13 +167,13 @@ section {
     flex-direction: column;
     gap: 2rem;
 }
-.about__image {
+.image__container {
     display: flex;
     position: relative;
     background: var(--bright);
     box-shadow: 0 0 20px 8px var(--darker);
 }
-.about__image::before {
+.image__container::before {
     content: '';
     position: absolute;
     top: 1rem;
@@ -154,9 +184,29 @@ section {
     z-index: -1;
     transition: 350ms ease-in-out;
 }
-.about__image:hover::before {
+.image__container:hover::before {
     top: 0;
     right: 0;
+}
+.about__image {
+    width: min(15vw, 15rem);
+    min-width: 6rem;
+}
+.projects__container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    display: none;
+}
+.projects__card {
+    display: flex;
+    gap: 2rem
+}
+.card__text {
+    display: flex;
+    width: 20rem;
+    background: var(--bright);
+    color: var(--dark);
 }
 footer {
     display: flex;
@@ -179,7 +229,9 @@ footer {
         border-top: 1px solid var(--bright);
         border-bottom: none;
     }
-    .navigation__container {gap: 0rem;}
+    .navigation__container { gap: 0rem; }
+    .header__socials { display: none; }
+    .about { flex-direction: column; }
     footer { padding: 2rem 2rem calc(2rem + var(--navHeightMobile)) 2rem; }
 }
 @media ( max-width: 450px ) {
