--- a/css/style.css
+++ b/css/style.css
@@ -18,17 +18,22 @@
     padding: 0;
     box-sizing: border-box;
 }
-html { scroll-behavior: smooth; min-width: 300px; }
+html {
+    scroll-behavior: smooth;
+    min-width: 300px;
+}
 body {
     min-height: 100vh;
     background: var(--dark);
     color: var(--bright);
     font-size: 25px;
     font-weight: 200;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     overflow-x: hidden;
 }
-.text--primary { color: var(--primaryColor); }
+.text--primary {
+    color: var(--primaryColor);
+}
 .navigation {
     width: 100vw;
     height: var(--navHeight);
@@ -52,13 +57,13 @@ body {
     gap: 1rem;
     transition: color 350ms ease-in-out;
 }
-@media (hover :hover) {
+@media (hover: hover) {
     .navigation__logo:hover {
         color: var(--bright);
         transition: color 350ms ease-in-out;
     }
 }
-  .navigation__logo:active {
+.navigation__logo:active {
     color: var(--bright);
     transition: color 350ms ease-in-out;
 }
@@ -73,7 +78,7 @@ body {
     color: var(--bright);
     transition: color 350ms ease-in-out;
 }
-@media (hover :hover) {
+@media (hover: hover) {
     .navigation__item:hover {
         color: var(--primaryColor);
         transition: color 350ms ease-in-out;
@@ -90,7 +95,7 @@ body {
     border: 1px solid var(--primaryColor);
     transition: 350ms ease-in-out;
 }
-@media (hover :hover) {
+@media (hover: hover) {
     .button--primary:hover {
         background-color: var(--primaryColor);
         color: var(--bright);
@@ -134,8 +139,7 @@ body {
     color: var(--bright);
     transition: color 350ms ease-in-out;
 }
-@media (hover :hover)
-{
+@media (hover: hover) {
     .socials__link:hover {
         color: var(--primaryColor);
     }
@@ -172,7 +176,7 @@ section {
     box-shadow: 0 0 20px 8px var(--darker);
 }
 .about__image-container::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 1rem;
     right: 1rem;
@@ -193,57 +197,50 @@ section {
 }
 .projects__container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, 40rem);
     gap: 2rem;
+    width: 100%;
 }
 .projects__card {
-    gap: 2rem;
-    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    background: var(--darker);
 }
-.projects__card::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--dark);
-    opacity: 0.55;
-    transition: opacity 350ms ease-in-out;
-}
-@media (hover :hover)
-{
+@media (hover: hover) {
     .projects__card:hover::before {
         opacity: 0;
     }
 }
 .card__image {
-    max-width: 100%;
+    width: 50%;
+    display: flex;
+}
+.card__image img {
+    min-width: 100%;
+    height: 15rem;
+    object-fit: cover;
 }
 .card__text {
     display: flex;
-    position: absolute;
-    inset: 0;
-    width: 100%;
+    flex-direction: column;
     justify-content: center;
+    flex: 1;
     align-items: center;
-    color: var(--bright);
 }
 footer {
     display: flex;
     justify-content: center;
     padding: 4rem;
-    background: var(--darker);;
+    background: var(--darker);
 }
-@media ( max-width: 1200px ) {
+@media (max-width: 1200px) {
     .projects__container {
         grid-template-columns: 1fr;
     }
 }
-@media ( max-width: 800px ) {
-    body { font-size: 1rem; }
+@media (max-width: 800px) {
+    body {
+        font-size: 1rem;
+    }
     .navigation {
         width: 100vw;
         height: var(--navHeightMobile);
@@ -257,13 +254,27 @@ footer {
         border-top: 1px solid var(--bright);
         border-bottom: none;
     }
-    .navigation__container { gap: 0rem; }
-    .header__socials { display: none; }
-    .about { flex-direction: column; }
-    footer { padding: 2rem 2rem calc(2rem + var(--navHeightMobile)) 2rem; }
+    .navigation__container {
+        gap: 0rem;
+    }
+    .header__socials {
+        display: none;
+    }
+    .about {
+        flex-direction: column;
+    }
+    footer {
+        padding: 2rem 2rem calc(2rem + var(--navHeightMobile)) 2rem;
+    }
 }
-@media ( max-width: 450px ) {
-    body { font-size: 0.8rem; }
-    .navigation__item { padding: 0.7rem; }
-    .button--primary { padding: 0.7rem;}
+@media (max-width: 450px) {
+    body {
+        font-size: 0.8rem;
+    }
+    .navigation__item {
+        padding: 0.7rem;
+    }
+    .button--primary {
+        padding: 0.7rem;
+    }
 }
