new idea about projects section

--- a/css/style.css
+++ b/css/style.css
@@ -197,13 +197,14 @@ section {
 }
 .projects__container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 50rem);
+    grid-template-columns: repeat(auto-fill, 30rem);
     gap: 2rem;
     justify-content: center;
     width: 100%;
 }
 .projects__card {
     display: flex;
+    flex-direction: column;
     background: var(--darker);
     box-shadow: 0 10px 15px 0 var(--darker);
 }
@@ -213,20 +214,22 @@ section {
     }
 }
 .card__image {
-    width: 50%;
     display: flex;
+    overflow: hidden;
+    height: 14rem;
+    position: relative;
 }
-.card__image img {
-    min-width: 100%;
-    height: 20rem;
-    object-fit: cover;
+.card__image > img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
 }
-.card__text {
+.card__info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    flex: 1;
-    align-items: center;
+    padding: 3rem;
 }
 footer {
     display: flex;
