--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,22 @@ body {
     min-height: 50vh;
     padding: var(--contentVerticalPadding);
 }
+.section__title {
+    display: flex;
+    position: relative;
+    white-space: nowrap;
+    width: fit-content;
+}
+.section__title::after {
+    content: "";
+    position: absolute;
+    display: block;
+    bottom: 0;
+    left: 0;
+    height: 1px;
+    width: 100%;
+    background: var(--primaryColor);
+}
 .about {
     flex-direction: row;
     align-items: flex-start;
@@ -274,10 +290,8 @@ footer {
         display: none;
     }
     .content {
-        padding: 0 1rem;
-    }
-    .content__section {
-        margin: 0 1rem;
+        padding: 0 0.5rem;
+        margin: 0 0.5rem;
     }
     .about {
         flex-direction: column;
