--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     --navHeightNegative: calc(-1 * var(--navHeight));
     --contentHorizontalPadding: 0 min(10vw, 10rem);
     --contentHorizontalMargin: 0 min(10vw, 10rem);
-    --contentVerticalPadding: min(1vw, 2rem) 0;
+    --contentVerticalPadding: min(10vw, 10rem) 0;
     --gap: 2rem;
 }
 *,
@@ -25,15 +25,16 @@
 html {
     scroll-behavior: smooth;
     min-width: 300px;
+    font-size: 16px;
 }
 body {
     min-height: 100vh;
     background: var(--backgroundColor);
     color: var(--bright);
-    font-size: 25px;
     font-weight: 200;
     font-family: "Josefin Sans", sans-serif;
     overflow-x: hidden;
+    font-size: 2rem;
 }
 .text--primary {
     color: var(--primaryColor);
@@ -95,6 +96,7 @@ body {
 .button--primary {
     padding: 1rem;
     text-decoration: none;
+    text-align: center;
     color: var(--primaryColor);
     border: 1px solid var(--primaryColor);
     transition: 250ms ease-in-out;
@@ -276,14 +278,17 @@ footer {
     padding: 4rem;
     background: var(--darkBackgroundColor);
 }
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
+    body {
+        font-size: 1.6rem;
+    }
     .projects__container {
         grid-template-columns: 1fr;
     }
 }
 @media (max-width: 800px) {
     body {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
     .navigation {
         width: 100vw;
@@ -292,7 +297,7 @@ footer {
         top: unset;
         bottom: 0;
         padding: 0;
-        gap: 0.5rem;
+        gap: 0.3rem;
         justify-content: center;
         background: var(--darkBackgroundColor);
         border-top: 1px solid var(--primaryColor);
@@ -315,18 +320,26 @@ footer {
     .about__image {
         align-self: center;
     }
+    .about__links {
+        justify-content: center;
+    }
+    .card__info {
+        padding: 1.5rem;
+    }
     footer {
         padding: 2rem 2rem calc(2rem + var(--navHeightMobile)) 2rem;
     }
 }
 @media (max-width: 450px) {
-    body {
-        font-size: 0.8rem;
-    }
     .navigation__item {
-        padding: 0.7rem;
+        padding: 0.7rem 0.4rem;
     }
     .button--primary {
-        padding: 0.7rem;
+        padding: 0.5rem;
+    }
+}
+@media (max-width: 350px) {
+    body {
+        font-size: 0.95rem;
     }
 }
