--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,7 @@ body {
     flex-direction: row;
     align-items: flex-start;
     flex-wrap: wrap;
+    margin: var(--contentHorizontalMargin);
 }
 .about__info {
     display: flex;
@@ -269,7 +270,7 @@ body {
 .card__tech::before {
     content: "";
     position: absolute;
-    inset: 0.6rem 0 0 -3rem;
+    inset: 0.55rem 0 0 -3rem;
     width: 1.5rem;
     height: 5px;
     background: var(--primaryColor);
@@ -329,6 +330,9 @@ footer {
         padding: 0 0.75rem;
         margin: 0 0.75rem;
     }
+    .about {
+        margin: 0;
+    }
     .about__info {
         flex-direction: column;
     }
@@ -342,7 +346,7 @@ footer {
         padding: 1.5rem;
     }
     .card__tech::before {
-        inset: 0.3rem 0 0 -1.6rem;
+        inset: 0.25rem 0 0 -1.6rem;
         width: 1rem;
         height: 3px;
     }
