--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     --contentHorizontalPadding: 0 min(10vw, 10rem);
     --contentHorizontalMargin: 0 min(10vw, 10rem);
     --contentVerticalPadding: min(10vw, 10rem) 0;
-    --gap: 2rem;
+    --gap: 3rem;
 }
 *,
 *::before,
@@ -96,11 +96,11 @@ body {
     text-align: center;
     color: var(--primaryColor);
     border: 1px solid var(--primaryColor);
-    transition: 250ms ease-in-out;
+    transition: color 250ms ease-in-out, background 250ms ease-in-out;
 }
 @media (hover: hover) {
     .button--primary:hover {
-        background-color: var(--primaryColor);
+        background: var(--primaryColor);
         color: var(--darkBackgroundColor);
     }
 }
@@ -117,6 +117,7 @@ body {
     align-items: center;
     flex-direction: column;
     padding: var(--contentHorizontalPadding);
+    margin: var(--contentHorizontalMargin);
 }
 .header__text {
     margin: var(--contentHorizontalMargin);
@@ -128,7 +129,7 @@ body {
     left: min(8vw, 10rem);
     display: flex;
     flex-direction: column;
-    gap: var(--gap);
+    gap: 2rem;
 }
 .header__socials::after {
     content: "";
@@ -202,7 +203,7 @@ body {
     position: relative;
     height: fit-content;
     background: var(--bright);
-    box-shadow: 0 10px 15px 0 var(--dark);
+    box-shadow: 0 15px 20px 5px var(--dark);
 }
 .about__image::before {
     content: "";
@@ -213,11 +214,13 @@ body {
     height: 100%;
     border: 1px solid var(--primaryColor);
     z-index: -1;
-    transition: 250ms ease-in-out;
+    transition: top 250ms ease-in-out, right 250ms ease-in-out;
 }
-.about__image:hover::before {
-    top: -1rem;
-    right: -1rem;
+@media (hover: hover) {
+    .about__image:hover::before {
+        top: -1rem;
+        right: -1rem;
+    }
 }
 .about__image > img {
     position: relative;
@@ -241,11 +244,12 @@ body {
     display: flex;
     flex-direction: column;
     background: var(--darkBackgroundColor);
-    box-shadow: 0 10px 15px 0 var(--dark);
+    box-shadow: 0 15px 20px 5px var(--dark);
+    transition: transform 250ms ease-in-out;
 }
 @media (hover: hover) {
-    .projects__card:hover::before {
-        opacity: 0;
+    .projects__card:hover {
+        transform: translateY(-0.8rem);
     }
 }
 .card__image {
@@ -282,6 +286,13 @@ body {
     flex: 1;
     align-items: flex-end;
 }
+.contact {
+    text-align: center;
+}
+.contact__links {
+    display: flex;
+    gap: 1rem;
+}
 footer {
     display: flex;
     justify-content: center;
@@ -304,6 +315,7 @@ footer {
         font-size: 1.2rem;
     }
     .header {
+        margin: 0;
         font-size: 1.2rem;
     }
     .navigation {
