--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,24 @@ body {
 .text--primary {
     color: var(--primaryColor);
 }
+.link--primary:focus {
+    outline: dashed 3px var(--primaryColor);
+    transition: transform 250ms ease-in-out;
+}
+.skip {
+    position: absolute;
+    top: var(--navHeight);
+    transform: translateX(-100%);
+    background: var(--darkBackgroundColor);
+    padding: 1rem;
+    text-decoration: none;
+    color: var(--bright);
+    z-index: 9999;
+}
+.skip:focus {
+    transform: translateX(0%);
+    transition: transform 250ms;
+}
 .navigation {
     width: 100vw;
     height: var(--navHeight);
@@ -47,7 +65,7 @@ body {
     justify-content: space-between;
     padding: 0 3rem 0 3rem;
     transition: top 250ms ease-in-out;
-    z-index: 9999;
+    z-index: 9998;
 }
 .navigation__logo {
     display: flex;
@@ -74,19 +92,19 @@ body {
     gap: 1rem;
     list-style: none;
 }
-.navigation__item {
+.navigation__link {
     padding: 1rem;
     text-decoration: none;
     color: var(--bright);
     transition: color 250ms ease-in-out;
 }
 @media (hover: hover) {
-    .navigation__item:hover {
+    .navigation__link:hover {
         color: var(--primaryColor);
         transition: color 250ms ease-in-out;
     }
 }
-.navigation__item:active {
+.navigation__link:active {
     color: var(--primaryColor);
     transition: color 250ms ease-in-out;
 }
@@ -123,7 +141,7 @@ body {
     margin: var(--contentHorizontalMargin);
     max-width: 80rem;
 }
-.header__socials {
+.socials {
     position: fixed;
     bottom: 0;
     left: min(8vw, 10rem);
@@ -131,7 +149,7 @@ body {
     flex-direction: column;
     gap: 2rem;
 }
-.header__socials::after {
+.socials::after {
     content: "";
     display: block;
     width: 1px;
@@ -142,6 +160,7 @@ body {
 .socials__link {
     text-decoration: none;
     color: var(--bright);
+    padding: 10px;
     transition: color 250ms ease-in-out;
 }
 @media (hover: hover) {
@@ -270,6 +289,7 @@ body {
 }
 .card__tech {
     position: relative;
+    flex: 1;
 }
 .card__tech::before {
     content: "";
@@ -281,10 +301,8 @@ body {
 }
 .card__links {
     display: flex;
-    justify-content: end;
     gap: 1rem;
-    flex: 1;
-    align-items: flex-end;
+    justify-content: end;
 }
 .contact {
     text-align: center;
@@ -340,7 +358,7 @@ footer {
     .navigation__container {
         gap: 0rem;
     }
-    .header__socials {
+    .socials {
         display: none;
     }
     .content {
