--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
 :root {
-    --bright: #f5f5f5;
+    --bright: #ffffff;
     --dark: #05090c;
     --backgroundColor: #0b1218;
-    --darkBackgroundColor: #090f14;
+    --darkerBackgroundColor: #090f14;
     --primaryColor: #00efff;
-    --navHeight: 8rem;
-    --navHeightMobile: 6rem;
+    --navHeight: 6rem;
     --navHeightNegative: calc(-1 * var(--navHeight));
     --contentHorizontalPadding: 0 8vw;
     --contentHorizontalMargin: 0 8vw;
@@ -43,7 +42,7 @@ body {
     position: absolute;
     top: var(--navHeight);
     transform: translateX(-100%);
-    background: var(--darkBackgroundColor);
+    background: var(--darkerBackgroundColor);
     padding: 1rem;
     font-size: 1.5rem;
     text-decoration: none;
@@ -56,14 +55,14 @@ body {
 }
 .navigation {
     width: 100%;
-    height: var(--navHeightMobile);
+    height: var(--navHeight);
     position: fixed;
     background-color: var(--backgroundColor);
     top: unset;
     bottom: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 0 1rem;
     border-top: 1px solid var(--primaryColor);
     border-bottom: none;
@@ -125,12 +124,12 @@ body {
 @media (hover: hover) {
     .button--primary:hover {
         background: var(--primaryColor);
-        color: var(--darkBackgroundColor);
+        color: var(--darkerBackgroundColor);
     }
 }
 .button--primary:active {
     background-color: var(--primaryColor);
-    color: var(--darkBackgroundColor);
+    color: var(--darkerBackgroundColor);
 }
 .header {
     display: flex;
@@ -200,7 +199,7 @@ body {
     align-self: center;
     position: relative;
     height: fit-content;
-    background: var(--bright);
+    background: #ffffff;
 }
 .about__image::before {
     content: "";
@@ -211,13 +210,6 @@ body {
     height: 100%;
     border: 1px solid var(--primaryColor);
     z-index: -1;
-    transition: top 250ms ease-in-out, right 250ms ease-in-out;
-}
-@media (hover: hover) {
-    .about__image:hover::before {
-        top: -1rem;
-        right: -1rem;
-    }
 }
 .about__image > img {
     position: relative;
@@ -226,7 +218,7 @@ body {
 }
 .about__links {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     gap: var(--gap);
     width: 100%;
 }
@@ -239,19 +231,21 @@ body {
 .projects__card {
     display: flex;
     flex-direction: column;
-    background: var(--darkBackgroundColor);
+    background: var(--darkerBackgroundColor);
     box-shadow: 0 15px 20px 5px var(--dark);
-    transition: transform 250ms ease-in-out;
+    transition: 250ms ease-in-out;
 }
 @media (hover: hover) {
     .projects__card:hover {
-        transform: translateY(-0.8rem);
+        box-shadow: 0 calc(15px + 0.5rem) 25px 10px var(--dark);
+        transform: translateY(-0.5rem);
     }
 }
 .card__image {
     display: flex;
     min-height: 14rem;
     position: relative;
+    box-shadow: 0 15px 20px 0px var(--dark);
 }
 .card__image > img {
     width: 100%;
@@ -296,7 +290,7 @@ footer {
     justify-content: center;
     font-size: 1.5rem;
     padding: 2rem;
-    background: var(--darkBackgroundColor);
+    background: var(--darkerBackgroundColor);
 }
 @media (min-width: 576px) {
     html {
@@ -310,18 +304,19 @@ footer {
     .header {
         min-height: 100vh;
     }
+    .header__text {
+        margin-top: var(--navHeight);
+    }
     .navigation {
         top:0;
-        bottom: inset;
+        bottom: unset;
+        justify-content: space-between;
         transition: top 250ms ease-in-out;
         border: none;
     }
 }
 @media (min-width: 992px) {
     .header {
-        padding: var(--contentHorizontalPadding);
-    }
-    .header__text {
         padding: var(--contentHorizontalPadding);
     }
     .socials {
