--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,11 @@ body {
     flex-direction: column;
     gap: var(--gap);
     font-size: 1.5rem;
+    text-indent: 2rem;
+}
+.paragrapgh::first-letter {
+    font-size: 3rem;
+    color: var(--primaryColor);
 }
 .about__image {
     display: flex;
