dark light mode, and layout adjustments

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,24 @@
 :root {
     --bright: #ffffff;
     --dark: #05090c;
-    --backgroundColor: #0b1218;
-    --darkerBackgroundColor: #090f14;
-    --primaryColor: #00efff;
+    --shadow: #e5e5e5;
+    --backgroundColor: #ffffff;
+    --darkerBackgroundColor: #ffffff;
+    --font-color: #4a4a4a;
+    --primaryColor: #02a4b1;
     --navHeight: 6rem;
     --navHeightNegative: calc(-1 * var(--navHeight));
     --contentHorizontalPadding: 0 8vw;
     --contentHorizontalMargin: 0 8vw;
     --contentVerticalPadding: min(10vw, 10rem) 0;
     --gap: 3rem;
+}
+.dark__theme {
+    --shadow: #05090c;
+    --backgroundColor: #0c141d;
+    --darkerBackgroundColor: #090f14;
+    --font-color: #fafafa;
+    --primaryColor: #00efff;
 }
 *,
 *::before,
@@ -26,10 +35,11 @@ html {
 body {
     min-height: 100vh;
     background: var(--backgroundColor);
-    color: var(--bright);
-    font-weight: 200;
-    font-family: "Josefin Sans", sans-serif;
+    color: var(--font-color);
+    font-weight: 300;
+    font-family: 'Josefin Sans', sans-serif;
     overflow-x: hidden;
+    transition: all 250ms ease-in-out;
 }
 .text--primary {
     color: var(--primaryColor);
@@ -46,7 +56,7 @@ body {
     padding: 1rem;
     font-size: 1.5rem;
     text-decoration: none;
-    color: var(--bright);
+    color: var(--font-color);
     z-index: 9999;
 }
 .skip:focus {
@@ -66,7 +76,7 @@ body {
     padding: 0 1rem;
     border-top: 1px solid var(--primaryColor);
     border-bottom: none;
-    transition: bottom 250ms ease-in-out;
+    transition: all 250ms ease-in-out;
     z-index: 9998;
 }
 .navigation__logo {
@@ -80,12 +90,12 @@ body {
 }
 @media (hover: hover) {
     .navigation__logo:hover {
-        color: var(--bright);
+        color: var(--font-color);
         transition: color 250ms ease-in-out;
     }
 }
 .navigation__logo:active {
-    color: var(--bright);
+    color: var(--font-color);
     transition: color 250ms ease-in-out;
 }
 .navigation__container {
@@ -96,7 +106,7 @@ body {
     padding: min(2vw, 1.2rem);
     font-size: 1.5rem;
     text-decoration: none;
-    color: var(--bright);
+    color: var(--font-color);
     transition: color 250ms ease-in-out;
 }
 @media (hover: hover) {
@@ -115,10 +125,10 @@ body {
     text-decoration: none;
     text-align: center;
     color: var(--primaryColor);
-    border: 1px solid var(--primaryColor);
+    border: 2px solid var(--primaryColor);
     transition: color 250ms ease-in-out, background 250ms ease-in-out;
 }
-.navigation__item>.button--primary{
+.navigation__item > .button--primary {
     padding: 1.2rem min(1.5vw, 5rem);
 }
 @media (hover: hover) {
@@ -131,9 +141,23 @@ body {
     background-color: var(--primaryColor);
     color: var(--darkerBackgroundColor);
 }
+
+.theme_toggle {
+    position: fixed;
+    bottom: 10vh;
+    right: 0;
+    padding: 1rem;
+    color: var(--primaryColor);
+    background-color: var(--darkerBackgroundColor);
+    border-radius: 25% 0 0 25%;
+    box-shadow: 0 5px 20px 5px var(--shadow);
+    z-index: 15;
+}
+
 .header {
+    position: relative;
     display: flex;
-    font-size: 1.75rem;
+    font-size: 2.2rem;
     gap: 6rem;
     min-height: calc(100vh - var(--navHeight));
     justify-content: center;
@@ -143,6 +167,28 @@ body {
 }
 .header__text {
     padding: var(--contentHorizontalPadding);
+}
+.header::before {
+    content: '▲';
+    position: absolute;
+    top: 8vh;
+    left: 0;
+    font-size: clamp(7rem, 10vw, 15rem);
+    color: transparent;
+    -webkit-text-stroke: 2px var(--primaryColor);
+    transform: rotate(15deg);
+    z-index: -1;
+}
+.header::after {
+    content: '■';
+    position: absolute;
+    bottom: 7vh;
+    right: 3vw;
+    font-size: clamp(10rem, 10vw, 20rem);
+    color: transparent;
+    -webkit-text-stroke: 2px var(--primaryColor);
+    transform: rotate(-25deg);
+    z-index: -1;
 }
 .socials {
     display: none;
@@ -165,23 +211,25 @@ body {
     display: flex;
     position: relative;
     font-size: 2.5rem;
+    font-weight: 600;
     white-space: nowrap;
     width: fit-content;
 }
-.section__title::after {
-    content: "";
-    position: absolute;
-    display: block;
-    bottom: 0;
-    left: 0;
-    height: 1px;
-    width: 100%;
-    background: var(--primaryColor);
-}
 .about {
+    position: relative;
     flex-direction: row;
     align-items: flex-start;
     flex-wrap: wrap;
+}
+.about::before {
+    content: '●';
+    position: absolute;
+    top: -10vh;
+    left: 5vw;
+    font-size: clamp(10rem, 10vw, 20rem);
+    color: transparent;
+    -webkit-text-stroke: 2px var(--primaryColor);
+    z-index: -1;
 }
 .about__info {
     display: flex;
@@ -192,7 +240,8 @@ body {
     display: flex;
     flex-direction: column;
     gap: var(--gap);
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    line-height: 2rem;
     text-indent: 2rem;
 }
 .paragrapgh::first-letter {
@@ -207,14 +256,14 @@ body {
     background: #ffffff;
 }
 .about__image::before {
-    content: "";
+    content: '';
     position: absolute;
-    top: 1rem;
-    right: 1rem;
-    width: 100%;
-    height: 100%;
-    border: 1px solid var(--primaryColor);
-    z-index: -1;
+    top: -0.5rem;
+    right: -0.5rem;
+    left: -0.5rem;
+    bottom: -0.5rem;
+    border: 2px solid var(--primaryColor);
+    z-index: 1;
 }
 .about__image > img {
     position: relative;
@@ -237,20 +286,20 @@ body {
     display: flex;
     flex-direction: column;
     background: var(--darkerBackgroundColor);
-    box-shadow: 0 15px 20px 5px var(--dark);
+    box-shadow: 0 5px 20px 5px var(--shadow);
     transition: 250ms ease-in-out;
+    z-index: 10;
 }
 @media (hover: hover) {
     .projects__card:hover {
-        box-shadow: 0 calc(15px + 0.5rem) 25px 10px var(--dark);
-        transform: translateY(-0.5rem);
+        box-shadow: 0 calc(5px + 0.4rem) 20px 10px var(--shadow);
+        transform: translateY(-0.4rem);
     }
 }
 .card__image {
     display: flex;
     min-height: 14rem;
     position: relative;
-    box-shadow: 0 15px 20px 0px var(--dark);
 }
 .card__image > img {
     width: 100%;
@@ -260,6 +309,7 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 1.5rem;
+    line-height: 1.7rem;
     padding: 2rem;
     gap: 1rem;
     flex: 1;
@@ -275,7 +325,7 @@ body {
     position: relative;
 }
 .card__tech--pointer::before {
-    content: "";
+    content: '';
     position: absolute;
     inset: 0.46rem 0 0 -2rem;
     width: 1.5rem;
@@ -288,9 +338,32 @@ body {
     justify-content: end;
 }
 .contact {
+    position: relative;
     padding: var(--contentHorizontalMargin);
     font-size: 1.5rem;
     text-align: center;
+}
+.contact::before {
+    content: '▲';
+    position: absolute;
+    bottom: 2vh;
+    left: 0;
+    font-size: clamp(7rem, 10vw, 15rem);
+    color: transparent;
+    -webkit-text-stroke: 2px var(--primaryColor);
+    transform: rotate(15deg);
+    z-index: -1;
+}
+.contact::after {
+    content: '■';
+    position: absolute;
+    top: -3vh;
+    right: 3vw;
+    font-size: clamp(10rem, 10vw, 20rem);
+    color: transparent;
+    -webkit-text-stroke: 2px var(--primaryColor);
+    transform: rotate(-25deg);
+    z-index: -1;
 }
 .contact__links {
     display: flex;
@@ -302,6 +375,7 @@ footer {
     font-size: 1.5rem;
     padding: 2rem;
     background: var(--darkerBackgroundColor);
+    transition: all 250ms ease-in-out;
 }
 @media (min-width: 576px) {
     html {
@@ -312,6 +386,10 @@ footer {
     html {
         font-size: 13px;
     }
+    .theme_toggle {
+        top: 15vh;
+        bottom: unset;
+    }
     .header {
         min-height: 100vh;
     }
@@ -319,14 +397,19 @@ footer {
         margin-top: var(--navHeight);
     }
     .navigation {
-        top:0;
+        top: 0;
         bottom: unset;
         justify-content: space-between;
-        transition: top 250ms ease-in-out;
         border: none;
     }
 }
 @media (min-width: 992px) {
+    :root {
+        --navHeight: 8rem;
+    }
+    .navigation {
+        padding: 0 3rem;
+    }
     .header {
         padding: var(--contentHorizontalPadding);
     }
@@ -336,20 +419,21 @@ footer {
         left: 4vw;
         display: flex;
         flex-direction: column;
-        font-size: 2rem;
+        font-size: 2.5rem;
         gap: 1rem;
+        z-index: 10;
     }
     .socials::after {
-        content: "";
+        content: '';
         display: block;
         width: 1px;
         height: 15vh;
         margin: 0px auto;
-        background-color: var(--bright);
+        background-color: var(--font-color);
     }
     .socials__link {
         text-decoration: none;
-        color: var(--bright);
+        color: var(--font-color);
         padding: 10px;
         transition: color 250ms ease-in-out;
     }
